--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
