--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+	"postbuild": "next-sitemap"
   },
   "dependencies": {
     "aos": "^2.3.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
